Generation of the graph by empirical_fractal.py Inverse circles and lines, less circles.

--- a/2014_12_16_memo_fractal.tex
+++ b/2014_12_16_memo_fractal.tex
@@ -42,7 +42,7 @@ The slope of $S_{2D}(q)$ is thus $-d_{2D}$. Then we suppose that the fractal is 
 
 \begin{figure}
 \includegraphics{empirical_fractal}
-\caption{Testing empirical expression. Lines are numerical integration of (Eq.~\ref{eq:exact}) normalized by $2\Gamma(d)$ for $d=1,1.5,2$. Circles are the corresponding empirical expression.}
+\caption{Testing empirical expression. Circles are numerical integration of (Eq.~\ref{eq:exact}) normalized by $2\Gamma(d)$ for $d=1,1.5,2$. Lines are the corresponding empirical expression.}
 \label{fig:empirical}
 \end{figure}
 
